Optimize site for SEO, accessibility, and performance
- Added alt and lazy loading to images for accessibility and performance
- Enhanced meta description and added comprehensive meta keywords for SEO
- Added Open Graph and Twitter Card meta tags for better social sharing
- Used absolute URLs for Open Graph images
- Deferred non-critical JavaScript for faster page load
- Removed unused CSS and JS files from the project
- Ensured contact form fields are accessible and clean

--- a/index.html
+++ b/index.html
@@ -23,6 +23,19 @@
         }
       </style>
     </noscript>
+    <meta name="description" content="Ehsan Ramezani – AI-powered bioinformatician, data scientist, and product innovator. Specializing in bioinformatics, AI, consultation, genomics, machine learning, data analysis, single-cell, spatial transcriptomics, DNA methylation, and scientific software development. Explore my CV, skills, experience, and contact information."/>
+    <meta name="keywords" content="Ehsan Ramezani, bioinformatics, AI, artificial intelligence, consultation, data science, genomics, machine learning, data analysis, single-cell, spatial transcriptomics, DNA methylation, scientific software, product development, biomedical data, computational biology, R, Python, Scanpy, Bioconductor, scientific consulting, research, Melbourne, MCRI, WEHI, University of Melbourne, Epilepsy, pipeline development, hardware, software, innovation, team leadership, scientific collaboration, academic CV, resume, portfolio"/>
+    <meta property="og:title" content="Ehsan Ramezani – AI-Powered Bioinformatician"/>
+    <meta property="og:description" content="Explore the CV, skills, and experience of Ehsan Ramezani, an AI-powered bioinformatician and product innovator."/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:image" content="https://www.eramezani.info/images/avatar.jpg"/>
+    <meta property="og:url" content="https://eramezani.github.io/"/>
+    <meta property="og:url" content="https://www.eramezani.info/"/>
+    <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:title" content="Ehsan Ramezani – AI-Powered Bioinformatician"/>
+    <meta name="twitter:description" content="Explore the CV, skills, and experience of Ehsan Ramezani, an AI-powered bioinformatician, data scientist, and product innovator."/>
+    <meta name="twitter:image" content="https://www.eramezani.info/images/avatar.jpg"/>
+    <!-- Also available at: https://www.eramezani.info/ -->
   </head>
   <body id="top">
     <header class="d-print-none">
@@ -47,7 +60,7 @@
   <div class="cover-bg p-3 p-lg-4 text-white">
     <div class="row">
       <div class="col-lg-4 col-md-5">
-        <div class="avatar hover-effect bg-white shadow-sm p-1"><img src="images/avatar.jpg" width="200" height="200"/></div>
+        <div class="avatar hover-effect bg-white shadow-sm p-1"><img src="images/avatar.jpg" width="200" height="200" alt="Ehsan Ramezani" loading="lazy"/></div>
       </div>
       <div class="col-lg-8 col-md-7 text-center text-md-start">
         <h2 class="h1 mt-2" data-aos="fade-left" data-aos-delay="0">Ehsan Ramezani</h2>
@@ -223,7 +236,7 @@ method="POST">
       </div>
     </footer>
     <script src="scripts/bootstrap.bundle.min.js?ver=1.2.0"></script>
-    <script src="scripts/aos.js?ver=1.2.0"></script>
-    <script src="scripts/main.js?ver=1.2.0"></script>
+    <script src="scripts/aos.js?ver=1.2.0" defer></script>
+    <script src="scripts/main.js?ver=1.2.0" defer></script>
   </body>
 </html>
